--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,7 @@ body {
 .home {
     position: relative;
     height: 85vh;
-    background: url('/images/home.jpg') no-repeat center center;
+    background: url('../images/home.jpg') no-repeat center center;
     background-size: cover;
 }
 
